// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Donut overview 1 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
}

<svg
    aria-label="donut graphic value 0 - from 1 tp 2"
    class="emotion-0"
    fill="none"
    height="184"
    role="img"
    stroke="currentcolor"
    stroke-width="3"
    viewBox="0 0 32 32"
    width="184"
  >
    <title>
      Bernadette Langosh Jr.
    </title>
    <circle
      cx="16"
      cy="16"
      opacity="0.125"
      r="13"
    />
    <circle
      cx="16"
      cy="16"
      r="13"
      stroke-dasharray="81.68140899333463"
      stroke-dashoffset="163.36281798666926"
      transform="rotate(-90 16 16)"
    />
  </svg>
</DocumentFragment>
`;

exports[`Donut overview 2 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
}

<svg
    aria-label="donut graphic value 1 - from 0 tp 0"
    class="emotion-0"
    fill="none"
    height="97"
    role="img"
    stroke="currentcolor"
    stroke-width="2"
    viewBox="0 0 32 32"
    width="97"
  >
    <title>
      Pearlie Altenwerth
    </title>
    <circle
      cx="16"
      cy="16"
      opacity="0.125"
      r="14"
    />
    <circle
      cx="16"
      cy="16"
      r="14"
      stroke-dasharray="87.96459430051421"
      stroke-dashoffset="0"
      transform="rotate(-90 16 16)"
    />
  </svg>
</DocumentFragment>
`;

exports[`Donut overview 3 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
}

<svg
    aria-label="donut graphic value 1 - from 1 tp 2"
    class="emotion-0"
    fill="none"
    height="246"
    role="img"
    stroke="currentcolor"
    stroke-width="1"
    viewBox="0 0 32 32"
    width="246"
  >
    <title>
      Lemuel Kris
    </title>
    <circle
      cx="16"
      cy="16"
      opacity="0.125"
      r="15"
    />
    <circle
      cx="16"
      cy="16"
      r="15"
      stroke-dasharray="94.24777960769379"
      stroke-dashoffset="94.24777960769379"
      transform="rotate(-90 16 16)"
    />
  </svg>
</DocumentFragment>
`;

exports[`Donut overview 4 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
}

<svg
    aria-label="donut graphic value 1 - from 0 tp 2"
    class="emotion-0"
    fill="none"
    height="215"
    role="img"
    stroke="currentcolor"
    stroke-width="1"
    viewBox="0 0 32 32"
    width="215"
  >
    <title>
      Jaquan Jakubowski
    </title>
    <circle
      cx="16"
      cy="16"
      opacity="0.125"
      r="15"
    />
    <circle
      cx="16"
      cy="16"
      r="15"
      stroke-dasharray="94.24777960769379"
      stroke-dashoffset="47.12388980384689"
      transform="rotate(-90 16 16)"
    />
  </svg>
</DocumentFragment>
`;

exports[`Donut overview 5 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
}

<svg
    aria-label="donut graphic value 1 - from 0 tp 0"
    class="emotion-0"
    fill="none"
    height="169"
    role="img"
    stroke="currentcolor"
    stroke-width="4"
    viewBox="0 0 32 32"
    width="169"
  >
    <title>
      Tanya Sanford
    </title>
    <circle
      cx="16"
      cy="16"
      opacity="0.125"
      r="12"
    />
    <circle
      cx="16"
      cy="16"
      r="12"
      stroke-dasharray="75.39822368615503"
      stroke-dashoffset="0"
      transform="rotate(-90 16 16)"
    />
  </svg>
</DocumentFragment>
`;
